<resources>
    <string name="app_name">pigeon</string>
    <string name="reglog"> Whisper to intimate</string>
    <string name="No_images"> No images have been selected yet.</string>
    <string name="Choose">Choose</string>
    <string name="not_supported">Sending video to the 7.0 system is not supported</string>
    <string name="system">Please send a picture of 7.0 system to the catalog.</string>
    <string name="picture">send picture 7.0</string>
    <string name="sdcard_no_exist">sdcard_no_exist</string>
    <string name="camera_not_prepared">The camera is not ready yet.</string>
    <string name="cancel_value">cancel</string>
    <string name="permission_request_error">"Failed to apply for permission"</string>
    <string name="permission_storage">The login needs to read and write memory permissions. If you reject or fail the system, please go to the permission setting page to manually authorize, otherwise the function will not be used properly.</string>
    <string name="permission_image">We need to take photos and read and write memory permission to be denied or the system error application failed, please go to the permission Settings page manual authorization, otherwise the function cannot be used normally!</string>
    <string name="module">In the process of developing, to the feedback module, write down what you want to do, and maybe the next update will have this function.</string>
    <string name="RSA">Making RSA key randomly</string>
    <string name="no__images">  You have not set up the image, voice, video password yet.</string>
    <string name="Historical">Historical information password</string>
    <string name="Thank">Thank you very much</string>
    <string name="Write_down_feedback">Write down feedback or Suggestions.</string>
    <string name="Download_failed">Download failed</string>
    <string name="Recording">Permissions blocked</string>
    <string name="Warning">Warning!  Login failed.The software is not a homing pigeon, you need to redownload the original carrier pigeon.</string>
    <string name="sent">Enter the information to be sent.</string>
    <string name="Recipient">Enter the recipient name.</string>
    <string name="everyone">Send to everyone</string>
    <string name="communication">Can communication</string>
    <string name="address_error">IP address error </string>
    <string name="start">start</string>
    <string name="address">Enter IP address</string>
    <string name="send">send</string>
    <string name="Message_is_empty"> Information cannot be empty.</string>
    <string name="homingpigeon">homingpigeon</string>
    <string name="group_disbanded"> group has been disbanded</string>
    <string name="is_removed_from_groupll"> is removed from group </string>
    <string name="removed_from_group">You are removed from the group.</string>
    <string name="update">Version update prompt</string>
    <string name="deletefeend">The command completes, the data is updated next time, or it can restart the program update immediately.</string>
    <string name="Settings_aes">Settings AES</string>
    <string name="Null">Null</string>
    <string name="TRUE">TRUE</string>
    <string name="savee">save</string>
    <string name="album">The picture has been saved to the album </string>
    <string name="paypal2txt">Support ,software running software is now free to use and you can use it for free. But you should be able to support the software at your convenience and make your use smoother. If you support alipay in your area, you can scan for support. Or you could use paypal.Thank you.</string>
    <string name="y">paypal</string>
    <string name="Support_address">Support address</string>
    <string name="get">get</string>
    <string name="use">use</string>
    <string name="work">work</string>
    <string name="Send_feedback">Send feedback or Suggestions.</string>
    <string name="Write_feedback">Write down your feedback.</string>
    <string name="Use_the_feedback">Use the feedback</string>
    <string name="soft_music">The soft music: </string>
    <string name="Explosive_music">Explosive music </string>
    <string name="no_sound">There is no sound </string>
    <string name="next_startup">Setup completes </string>
    <string name="friendlist">Friends list</string>
    <string name="no_exchange_images">  has not exchanged images, sounds, video passwords.</string>
    <string name="toobig">The file was too big to fail.</string>
    <string name="Password_mistake">Password mistake</string>
    <string name="The_name_wrong">Login successful</string>
    <string name="Login_successful">Login successful</string>
    <string name="help">help</string>
    <string name="support">support</string>
    <string name="sound">sound</string>
    <string name="Online">Whether online</string>
    <string name="history">Historical information</string>
    <string name="Group_list">Group list  and Settings</string>
    <string name="Friends_list">Friends list and key</string>
    <string name="add">add</string>
    <string name="Quit">exit</string>
    <string name="ber">Members</string>
    <string name="Joi_the_group"> join the group   </string>
    <string name="Sending_AES_KEY">Sending AES KEY to   </string>
    <string name="Deleting_group_members">Deleting group member </string>
    <string name="Delete_group_members">Delete members  </string>
    <string name="Deleting_groups">Deleting group  </string>
    <string name="Delete_the_group">Delete group </string>
    <string name="Sending_invitations">Sending invitations </string>
    <string name="join_thgroup">Invite friends to join the group</string>
    <string name="commands">You cannot execute commands.</string>
    <string name="Quit_group">Quit group</string>
    <string name="Group_members">  Group members</string>
    <string name="Group_successful"> Group successful establishment</string>
    <string name="Group_removed"> Group removed</string>
    <string name="Withdrawn_group"> Withdrawn group</string>
    <string name="group_exists_fails">The group name already exists and the group creation fails.</string>
    <string name="group_being">  group is being registered with the server</string>
    <string name="group_already_exists"> group name already exists</string>
    <string name="greater_than_20">The group list cannot be greater than 20</string>
    <string name="groupname">Enter group name</string>
    <string name="grouppass">Enter group password</string>
    <string name="dissociates_from"> has nothing to do with you.</string>
    <string name="Delete_friend">Delete friend : </string>
    <string name="delete">delete</string>
    <string name="dialogue">dialogue</string>
    <string name="Save_the_image">Save the image, voice, video password. </string>
    <string name="Seg_key">Image, voice, video password: </string>
    <string name="Rsa_public_key">Rsa public key: </string>
    <string name="RSA_private_key">RSA private key: </string>
    <string name="Aes_key">Aes key :</string>
    <string name="password_status">status</string>
    <string name="Sending_a_pictur">Sending a picture, voice, video password to ：</string>
    <string name="RSA_data">RSA data update is successful</string>
    <string name="public_key_too_long">public key too long "</string>
    <string name="private_key_too_long">private key too long "</string>
    <string name="public_key_empty">public key Can not be empty</string>
    <string name="private_key_empty">private key Can not be empty</string>
    <string name="AES_data_updated">AES data updated successfully.</string>
    <string name="des_key_yet">你还没有设置DES密钥 </string>
    <string name="aes_key_yet">You have not set your Aes key yet  </string>
    <string name="Sending_DES_KEY">正在发送DES密码给    </string>
    <string name="Sending_RSA">Sending RSA KEY to </string>
    <string name="public_key_yet">You have not set the public key yet.</string>
    <string name="Choose_to_operate">Choose to operate </string>
    <string name="Send_the_image_password">Send picture video voice password.</string>
    <string name="grouppassd">group password </string>
    <string name="addgroup">addgroup</string>
    <string name="back">back</string>
    <string name="updated_mage">Save image, voice, video key</string>
    <string name="Input_image_key">Input image, voice, video key</string>
    <string name="SAVE_THE_RSA">SAVE THE DES KEY </string>
    <string name="rsax">Enter DES  password</string>
    <string name="rsay">Enter Rsa public key</string>
    <string name="Save_Aes">Save Aes key</string>
    <string name="aes">Enter AES password</string>
    <string name="addfrin">add </string>
    <string name="stimg">seting</string>
    <string name="develop">develop</string>
    <string name="groupmessage">group</string>
    <string name="login"> login </string>
    <string name="Not_joining_groups">  Not joining groups  </string>
    <string name="have_joined_group">  have joined the group  </string>
    <string name="invited_you">  invited you to join group  </string>
    <string name="join_the_group"> Join the group</string>
    <string name="not_agree_join_group">   does not agree to join the group  </string>
    <string name="not_exist"> not exist</string>
    <string name="do_agree_make_friends"> does not agree to make friends.</string>
    <string name="agreed_exchange_DES"> agreed to exchange the DES password</string>
    <string name="agreed_exchange_AES"> agreed to exchange the AES password</string>
    <string name="not_agreeexchange_DES"> does not agree to exchange DES passwords.</string>
    <string name="not_agreeexchange_AES"> does not agree to exchange AES passwords.</string>
    <string name="not_agree_exchange_pictures_key"> does not agree to exchange pictures, voice, video passwords.</string>
    <string name="not_agree_exchangebb_keys"> does not agree to exchange public keys.</string>
    <string name="No_public_key"> No public key</string>
    <string name="online"> online</string>
    <string name="has_not_exchanged_the_RSA">  has not exchanged the SRA password</string>
    <string name="updated_key">There is information, but your decryption algorithm is not updated to view the information.</string>
    <string name="not_a_friend">is not a friend.</string>
    <string name="has_not_exchanged_the_AES">  has not exchanged the AES password</string>
    <string name="make_friends">make friends with</string>
    <string name="downloading">downloading</string>
    <string name="Versionupdate">Version update</string>
    <string name="Not_a_group"> Not a group </string>
    <string name="Message_too_long"> Message is too long</string>
    <string name="agrees_to_join_group"> agrees to join group</string>
    <string name="Information_from"> Information from</string>
    <string name="No_AES_key"> do not exchange AES keys.</string>
    <string name="public_key_exchanged"> has switched public keys.</string>
    <string name="Complete_the_image">Complete the image, voice, video password from </string>
    <string name="photo_password">Agree to exchange photo audio video password from </string>
    <string name="Exchange_file_password">Exchange file password</string>
    <string name="Donhavekey">Friends request an exchange, but you do not have a public key</string>
    <string name="Donagree">  Do not agree </string>
    <string name="exchange_public_key"> Exchange of public key </string>
    <string name="Exchange_of_public_key"> Exchange of public key </string>
    <string name="no">no</string>
    <string name="sure">sure</string>
    <string name="receive_the_des_password">Agree to receive the DES password :</string>
    <string name="nologin">nologin</string>
    <string name="agreement">agreement</string>
    <string name="registered">registered</string>
    <string name="Password">password</string>
    <string name="user">account</string>
    <string name="CheckBox">Agree to a deal</string>
</resources>