<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="12dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button12"
        android:onClick="hback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/back"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/button22"
        android:onClick="work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button12"
        android:layout_toRightOf="@+id/button12"
        android:text="@string/work" />

    <Button
        android:id="@+id/button23"
        android:onClick="use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button22"
        android:layout_toRightOf="@+id/button22"
        android:text="@string/use" />



    <Button
        android:id="@+id/button24"
        android:onClick="get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button23"
        android:layout_toRightOf="@+id/button23"
        android:text="@string/get" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button12">
        <TextView
            android:id="@+id/textView28"

            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </ScrollView>
</RelativeLayout>