<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="#00ddff"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button10"
        android:onClick="goupp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/back"
        android:layout_toLeftOf="@+id/textView16"
        android:layout_toStartOf="@+id/textView16" />

    <Button
        android:id="@+id/button19"
        android:onClick="addgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addgroup"
        android:layout_above="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/button19"
        android:hint="@string/groupname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button19"
        android:hint="@string/grouppass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:layout_above="@+id/textView16" />

    <ListView
        android:id="@+id/listname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textView15" />


</RelativeLayout>