<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button35"
        android:onClick="pback"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp" />

    <Button
        android:id="@+id/button39"
        android:onClick="pay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button35"
        android:layout_toEndOf="@+id/button35" />

    <Button
        android:id="@+id/button41"
        android:onClick="sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savee"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView3"
        android:scaleType="fitCenter"
        android:src="@mipmap/zfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button35" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/paypal2txt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>